client: Get the current directory via PWD

If PWD is set and refers to the current directory, use PWD. This is necessary
so that when opening a new terminal in a directory that is a symlink, the shell
starts in the symlink'd directory and not in the symlink's target.

https://bugzilla.gnome.org/show_bug.cgi?id=502146